deploy: aeb74e0344635f92c73fd29c808b7e5cd9d8b436

--- a/AGOID.29371/manifest.json
+++ b/AGOID.29371/manifest.json
@@ -374,7 +374,7 @@
                                         "width": 474,
                                         "label": {
                                             "en": [
-                                                "MA-XRF Phosphorus (P)"
+                                                "MA-XRF Phosphorous (P)"
                                             ]
                                         },
                                         "service": [
