--- a/AGOID.29372/manifest.json
+++ b/AGOID.29372/manifest.json
@@ -336,7 +336,7 @@
                                         "width": 476,
                                         "label": {
                                             "en": [
-                                                "MA-XRF Phosphorus (P)"
+                                                "MA-XRF Phosphorous (P)"
                                             ]
                                         },
                                         "service": [
